--- a/Sailora.Identity/appsettings.Development.json
+++ b/Sailora.Identity/appsettings.Development.json
@@ -1,7 +1,7 @@
 {
   "Secret": "secretkeyclient0",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=84.38.189.95;Port=30472;Database=Sailora; User Id=postgres;Password=5482"
+    "DefaultConnection": ""
   },
   "Logging": {
     "LogLevel": {
