--- a/Sailora.Identity/appsettings.json
+++ b/Sailora.Identity/appsettings.json
@@ -9,6 +9,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=84.38.189.95;Port=30472;Database=Sailora; User Id=postgres;Password=5482"
+    "DefaultConnection": ""
   }
 }
